<resources>
    <string name="app_name">MyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="create_your_first_note">Create your first note!</string>
    <string name="display_app_details">Display app details</string>
    <string name="search_for_any_notes">search for any notes</string>
    <string name="add_note_button">add note button</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="view_edited_note">view edited note</string>
    <string name="save_edited_note">save edited note</string>
    <string name="go_back">go back</string>
    <string name="type_something">Type something...</string>
    <string name="warning">Warning!!!</string>
    <string name="negative">Negative</string>
    <string name="positive">positive</string>
    <string name="search_by_the_keyword">Search by the keyword...</string>
    <string name="file_not_found_try_searching_again">File not found. Try searching again.</string>
    <string name="designed_by">Designed by -</string>
    <string name="redesigned_by">Redesigned by -</string>
    <string name="illustration">Illustration -</string>
    <string name="icons">Icons -</string>
    <string name="font">Font -</string>
    <string name="made_by">Made by - Pritesh Nikam</string>
    <string name="save_changes">Save changes?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="note_saved">Note saved</string>
    <string name="please_write_something">Please write something</string>
    <string name="note_updated">Note updated</string>
    <string name="sure_want_to_exit">Are you sure you want to discard your changes?</string>
    <string name="keep">Keep</string>
</resources>