<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="@dimen/dp_330"
    android:layout_height="@dimen/dp_236"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background_dark_color"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearLayout_appInfoFragment"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="78dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designed_by"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redesigned_by"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/illustration"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icons"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_by"
            android:textSize="@dimen/sp_20"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

