<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_dark_color"
        tools:context=".ui.homescreen.HomeScreenFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_Title_homeScreen"
            android:layout_width="@dimen/dp_115"
            android:layout_height="@dimen/dp_59"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_47"
            android:layout_marginEnd="@dimen/dp_275"
            android:background="@color/app_background_dark_color"
            android:text="@string/notes"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_43"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_search_homeScreen"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_51"
            android:layout_marginEnd="@dimen/dp_96"
            android:clickable="true"
            android:contentDescription="@string/search_for_any_notes"
            android:focusable="true"
            android:padding="@dimen/dp_3"
            android:src="@drawable/ic_svg_viewer_search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_app_info_home_screen"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_51"
            android:layout_marginEnd="@dimen/dp_25"
            android:clickable="true"
            android:contentDescription="@string/display_app_details"
            android:focusable="true"
            android:padding="@dimen/dp_3"
            android:src="@drawable/ic_svg_viewer_info"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_empty_home_screen"
            android:layout_width="@dimen/dp_350"
            android:layout_height="@dimen/dp_286.73"
            android:layout_marginTop="@dimen/dp_283"
            android:background="@drawable/empty_background_img"
            android:src="@mipmap/empty_fragment_image"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_createNote_homeScreen"
            android:layout_width="@dimen/dp_195dp"
            android:layout_height="@dimen/dp_27"
            android:layout_marginTop="6.7dp"
            android:text="@string/create_your_first_note"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_empty_home_screen" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_homeScreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginTop="@dimen/dp_143"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/single_note_view"
            android:overScrollMode="never" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButton_homeScreen"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/dp_35"
            android:layout_marginBottom="@dimen/dp_49"
            android:backgroundTint="@color/app_background_dark_color"
            android:contentDescription="@string/add_note_button"
            android:foreground="@drawable/ic_svg_viewer_plus"
            android:foregroundGravity="center"
            app:borderWidth="@dimen/dp_0"
            app:fabCustomSize="@dimen/dp_70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>